Bootstrap vue added

--- a/client/main.html
+++ b/client/main.html
@@ -1,7 +1,9 @@
 <head>
-  <title>subject_chooser</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+
+	<title>Subject Chooser</title>
 </head>
 
 <body>
-  <div id="app"></div>
+	<div id="app"></div>
 </body>
